# gappy

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  MIGRATION.md  README.md  TESTING.md  ZEABUR.md  docker-compose.yml  pyproject.toml
app/: celery_app.py  main.py  workflow.py
app/api/v1/: analyses.py  documents.py  findings.py
app/core/: config.py  database.py  security.py
app/llm/: router.py
app/models/: analysis.py  document.py  finding.py  requirement.py  user.py
app/scripts/: seed_data.py
app/services/: analysis.py  export.py  extraction.py  ingestion.py  workflow.py
app/tasks/: analysis_tasks.py  workflow_tasks.py
app/templates/: base.html  dashboard.html  documents.html  macros.html  report.html  run_analysis.html  upload.html
app/tests/: conftest.py  test_analysis_pipeline.py  test_api_integration.py  test_e2e_compliance_flow.py  test_e2e_review_cycle.py  test_error_cases.py  test_error_handling.py  test_export_service.py  test_full_e2e_live.py  test_full_workflow.py  test_performance.py  test_upload_flow.py  test_workflow_engine.py  ui_helpers.py
