[project]
name = "project-gappy"
version = "0.1.0"
description = "Regulatory Gap Analysis System - Project Gappy"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.6",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "litellm>=1.52.0",
    "celery>=5.4.0",
    "redis>=5.0.8",
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.12",
]
